--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -8,6 +8,9 @@
 - 目を合わせる
 - 微笑みかける
 - 相手の話を聞いている姿勢を示す
+  - 顔を相手に向ける
+  - 体ごと相手に向ける
+  - 前のめりになる
   - 相槌を打つ
   - 話を遮らない
     - 質問して話を誘導しない（言いたいことがわからない時は質問していい）
@@ -16,7 +19,8 @@
     - 詳しく質問する
     - 話をまとめない
   - 話の重要な部分で大きく反応する
-  - 体ごと相手に向ける
+    - 驚く
+    - 目を見開く
   - ノリ、テンションを合わせる
   - 相手の表情と合わせる
 - 相手を理解しようとする
@@ -121,3 +125,8 @@
 歩いている時も相手をよく見る。まぁ、転ばない程度に。
 
 「どうせもう関わらないから、雑でいい」って判断もわかる。
+
+顔だけを相手に向けるより、体ごと相手に向けるほうがより関心が高く感じる。
+関心を示すにも度合いがある。分けたほうがいいか。
+
+前のめりになったり、目を見開いたりするのも関心を示す。
