--- a/shared/learning/tips/反省.md
+++ b/shared/learning/tips/反省.md
@@ -9,3 +9,6 @@
 
 過去の手を思い出してどうすればよかったか考えるのは大事。
 悪手に気付けるのが大事。気付けないと覚えてられない。
+
+反省会では必ずよかったところも話す。悪いところばかり話しても散らかるだけ。良いところは残したままでないと改善とは言えない。
+よかったところはDone/Fun/Learnが基本。
