--- a/shared/leisure/examples/travel/jp/東京.md
+++ b/shared/leisure/examples/travel/jp/東京.md
@@ -23,3 +23,5 @@ https://www.tokyo-zoo.net/zoo/ino/hanagoyomi/index.html
 
 多摩行きの中央線は始点の東京から乗ると座りやすい。
 東京行きだと立川、三鷹、新宿あたりの乗り換えが多くて座りやすい。
+
+流行の発信地といえば原宿。
