--- a/shared/lifestyle/meal/栄養.md
+++ b/shared/lifestyle/meal/栄養.md
@@ -1,3 +1,9 @@
+- 炭水化物
+- 蛋白質
+- 脂質
+- ビタミン
+- ミネラル
+
 人間は食べたものの栄養をそのまま使っているのではなくて、体内で生成するものもある。
 
 体内で生成できないものは食物から得るしかない。
@@ -26,3 +32,5 @@
 
 脂質と一口に言ってもその質は結構違う。
 古い油よりは新鮮な油の方がいい。ナッツとか、鮮魚とか、オリーブオイルとか。
+
+ミネラルは英語で鉱物のこと。一番重要なのは塩。
