--- a/shared/logic/合理性.md
+++ b/shared/logic/合理性.md
@@ -29,3 +29,7 @@
 「冷静沈着で合理的すぎると思っていた人が一番理屈ではない選択をしているのかもしれない」（『アンサングシンデレラ』）
 
 合理性を追求するよりも、合理的な判断がされなかった理由を分析するべき。
+
+勝ち確の場面であえてリスクを取って一人勝ちを狙おうとする人もいる。非合理的ではあるけど、人間的でもある。
+
+人間は不合理だ。不合理こそが人間性だ。ユーモア。
