--- a/shared/life/老い.md
+++ b/shared/life/老い.md
@@ -9,3 +9,7 @@
 過去にどれだけ偉業を成し遂げた人でも、80-90超えたらもうただのボケたおじいちゃんおばあちゃんでしかない。期待するのは酷というもの。
 
 歳をとるほど不調の日が増えるので、不調や疲労に気づけるような習慣があるといい。足ツボマットなんかも役割としては近い。
+
+おじさんはまだ若い。
+
+「今日が人生で一番若い日」（チャールズ・ディードリッヒ）
