--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -30,6 +30,8 @@
   - 先に話しかける
 - 歩くペースを合わせる
 - 食べるペースを合わせる
+- 驚かせない
+  - 急に大きな音を立てない
 
 ## その他
 
@@ -157,3 +159,5 @@
 好きを伝えたり、褒めたりすると気負いすることもあるので、「その服好きなんだけど、どこで買うの？」みたいに褒めてすぐ別の話を振るのも気遣い。
 
 気遣いの代わりに、謝る、という裏技もある。
+
+相手の反応が鈍いと言うか、触れてほしくない話題も覚えておくといい。
