--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -570,3 +570,8 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 警戒すべき対象を信頼してもリスクが上がるだけ。
 
 人間相手の場合は、相手を信頼してないと信頼されないこともある。
+
+信頼には期待感と安心感の2種類がある。
+恩恵があることと、弊害がないこと。
+
+副作用が強い薬は、期待感を持って飲んだとしても、安心感を持ってはいけない。分量や症状に注意して、油断せずに飲む。
