--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -76,3 +76,5 @@ UIに不満を感じたら、何かが「期待通りに動いていない」と
 
 他人は財布を盗まない、と思っていても、一応財布は常に身につけておくことでそもそも鞄を置きっぱなしでも盗まれる余地がない。
 期待することと、そもそも問題が起きないように備えることは分けて考える。
+
+横断歩道で全ての車が止まると期待するよりも、実際に止まるまで待つタイプ。
