--- a/shared/thinking/analysis/analytics/比較.md
+++ b/shared/thinking/analysis/analytics/比較.md
@@ -21,3 +21,11 @@
 何かを比べるのは選ぶため。
 
 100点と100点は比べられない。
+
+人を比較する行為は商品として見ている。とはいえ普通はそう。でも表に出さないほうがいい。
+
+比較や競争で世界を見ている人は他人を見下すのであまり相手にしたくない。
+商売の世界だと商品には競争がある。そう言う点で言うと競争優位性は商品として見てるのかも。
+
+優位性自体は競争。争い。
+選ばれるには競争優位性を見せるのが必要なこともある。
