--- a/games/SRW/スーパーロボット大戦.md
+++ b/games/SRW/スーパーロボット大戦.md
@@ -1,3 +1,7 @@
+# スーパーロボット大戦
+
+戦争シミュレーションゲームの一種。
+
 ## ユニットの評価軸
 
 - 機動力 (移動力、加速、突撃、連撃、覚醒)
@@ -19,3 +23,7 @@
 - 拡張性
   - パーツスロット
 - その他 (気力UP、SP回復、援護攻撃、援護防御、絆、共感、威圧、など)
+
+## その他
+
+スパロボはシリーズ経験者なら最初からハードでもいい。
