--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -32,6 +32,7 @@
 - 食べるペースを合わせる
 - 驚かせない
   - 急に大きな音を立てない
+- 相手がしたいと思っていることを、自分からやりたいと言う
 
 ## その他
 
@@ -161,3 +162,5 @@
 気遣いの代わりに、謝る、という裏技もある。
 
 相手の反応が鈍いと言うか、触れてほしくない話題も覚えておくといい。
+
+相手がしたいと思っていることを自分がやりたいと言うのも気遣い。
