--- a/shared/family/marriage/結婚の話題.md
+++ b/shared/family/marriage/結婚の話題.md
@@ -1,19 +1,45 @@
-- 結婚相手に外せない条件は？
 - 結婚したいか
-- 披露宴はしたいか
-- 子供は何人欲しいか
+  - 何歳までに結婚したいか
+
+## 入籍の話題
+
+- いつ籍を入れるか
+
+## 結婚式の話題
+
+- 結婚式をするか
+- 披露宴をするか
+- 披露宴に誰を呼ぶか
+- どのくらいの規模の結婚式にするか
+
+## 財政や仕事の話
+
+- どれくらいの予算で生活するか
 - 共働きするか
+- 結婚しても仕事を続けたいか
+- 出産しても仕事を続けたいか
 - 負債はあるか
 - 資産はあるか
 - 結婚前に持っていた資産や負債をどう扱うか
 - お互いの収入をどう扱うか、どの程度共通の収入とするか
-- 出産しても仕事を続けたいか
 - 将来のキャリアの目標はあるか
+
+## 家庭の話
+
+- どんな家庭にしたいか
+- 子供が欲しいか
+- 子供は何人欲しいか
 - 子供をどのように教育したいか
-- 宗教を信仰しているか
-- 政党を支持しているか
 - どのように家事を回すか
-- どこに住みたいか
 - 親兄弟と一緒に住みたいか
 - 意見が対立したらどのように解決するか
 - 譲れないことはあるか
+- どこに住むか
+- どんな家に住むか
+- 休日をどう過ごすか
+- お互いの趣味をどう扱うか
+
+## その他
+
+- 特定の宗教を信仰しているか
+- 特定の政党を支持しているか
