--- a/shared/game/competitive/優位性を示す.md
+++ b/shared/game/competitive/優位性を示す.md
@@ -32,3 +32,5 @@
 男は格上か格下かの判断より前に、人かどうかの判断が入る。つまり、衝動的で、品性がない獣と、そうでない人の判断。ほとんどの女は獣側に入ってるので、格上とか格下とかの次元にいない。
 
 女性に対してオドオドしてる男でも単に女と目を合わせるとキィキィ言いながら威嚇したり荷物に手を突っ込んできたりするから目を合わせないだけで、正直女のことはバカだと思ってる。だから、女子側から格上とか格下とかって考えるのがもうおもろい。
+
+優位性を示すのはマウントだけじゃない。
