--- a/shared/human/body/muscle/training/筋トレ.md
+++ b/shared/human/body/muscle/training/筋トレ.md
@@ -34,3 +34,5 @@ https://x.com/suzuran_www/status/2010824821874299115?s=20
 https://youtube.com/shorts/XidLUyHry7g?si=lH8Mb283u2gbl-UH
 
 筋肉をつける前に体力をつける。少ない回数でもいいのでまずは全身の筋トレを続ける。腕立て20回、プランク30秒、スクワット20回、あたりから始める。
+
+筋トレはまず回数を増やしていくのが基本。最低の負荷でも目標回数達成できないなら。特に、正しいフォームで負荷をかけるのが大事。間違ったフォームで数だけこなしても効果が弱いし、怪我することもある。よく勉強してからトレーニングする。
