--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -153,3 +153,6 @@ pleasure.
 期間を強調する。
 
 誰にでも当てはまるようなことを相手にだけ当てはまっているみたいに言う。雑に褒めれる。
+
+相手が自分でも良いと思っているところを褒めると信憑性が高い。
+ただ、何度も言われていることになりやすいので差別化するのが難しい。
