--- a/shared/people/人を見る.md
+++ b/shared/people/人を見る.md
@@ -95,3 +95,12 @@
 結局、相手が何を考えているかはわからない。
 
 人と会った時にどこに目をつけるか。
+
+- 誰といるか
+  - 1人
+    - 誰かを待っているか
+  - 2人以上
+    - 関係は？
+    - 歳の差は？
+    - 性別は？
+    - 親しいか
