--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -190,3 +190,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 
 相手に合わせて臨機応変に処理する。
 相手を見て、例えば体調が悪かったら重い食べ物よりお粥にするとか。
+
+道に子どもがいたら動きを予測するのと同時に、どう動いてもいいようにスピードを落とすのが配慮。
