--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -82,3 +82,5 @@ https://youtube.com/shorts/aT50_SS68sU?si=wmzwM8P4DBMwjV2O
 https://youtube.com/shorts/32-6rSXj73w?si=nFSwcSQKf3U-KdXM
 
 [腕立て伏せでよくある間違い 7 つ｜正しいフォームについて解説！ - YouTube](https://youtube.com/watch?v=NS4Rta4mFWQ&si=UuAu8nVGqpu8fLCL)
+
+プッシュアップは顎より胸を床につける。
