--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -2,6 +2,10 @@
 
 滑稽。
 
+ユーモアの本質は、ネガティブなことをポジティブに解釈、表現すること。特に表現。
+
+ユーモアの根っこには愛がある。
+
 いわゆる「ユーモア」とは周りを笑わせるような振る舞いのこと。
 あるいは「おかしな人」から来ている。
 
@@ -15,17 +19,6 @@
 緊張を緩和することで人は笑うし、人々の間の緊張を緩和するのが政治の要でもある。
 
 [ユーモア - Wikipedia](https://ja.wikipedia.org/wiki/%E3%83%A6%E3%83%BC%E3%83%A2%E3%82%A2)
-
-「やる」と見せかけて「やらない」
-→ 自虐
-「やらない」と見せかけて「やる」
-→ サプライズ、無茶、大袈裟なリアクションやキャラクタライズ、暴露
-「やる」と見せかけて「やらない」と見せかけて「やる」
-→ 期待通り
-
-このようなある種の「裏切り」がユーモアにつながる。
-「驚き」と言ってもいいかも。驚きが瞬間的な緊張を生む。
-ただ、驚きっぱなしでは笑いにならない。ボケの行き過ぎた緊張をツッコミで緩和する漫才の形もある。
 
 「おかしい」「変」というのが驚きと関連している。
 ユーモアだけの話ではない。
@@ -296,3 +289,18 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 趣や興もユーモア。個性があることで、興味をひく。でも安心感があれば楽しい。怖がられてしまうと良くない。
 
 世間一般から外れたものはそもそも受け入れられにくいという問題がある。そこを洗練された品の良さで補う必要がある。ユーモアは上品。文化によっても変わる。
+
+ネガティブな物事にどう返すか、のパターンはたくさんあった方がいい。
+
+ユーモアと励ましは少し違う。
+励ましはあくまでもネガティブなものとして捉えている。
+
+ユーモアの基礎は考えること。ネガティブな印象を疑うこと。
+「それって何が悪いんだ？」が基本。
+
+言った本人はネガティブだと思ってない場合もある。
+その場合でもポジティブに捉えればどっちでもいける。
+
+ユーモアのある返しは、目を見て伝える。相手にちゃんと愛や関心があることを示さないと間違って伝わりやすい。
+
+ポジティブに表現する前に、事実確認で少し掘り下げるのは問題ない。
