--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -23,3 +23,14 @@
 
 - 拙い言語で喋るのを見る
 - お互いに勘違いしている会話を見る
+
+「やる」と見せかけて「やらない」
+→ 自虐
+「やらない」と見せかけて「やる」
+→ サプライズ、無茶、大袈裟なリアクションやキャラクタライズ、暴露
+「やる」と見せかけて「やらない」と見せかけて「やる」
+→ 期待通り
+
+このようなある種の「裏切り」がボケにつながる。
+「驚き」と言ってもいいかも。驚きが瞬間的な緊張を生む。
+ただ、驚きっぱなしでは笑いにならない。ボケの行き過ぎた緊張をツッコミで緩和する漫才の形もある。
