--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -304,3 +304,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアのある返しは、目を見て伝える。相手にちゃんと愛や関心があることを示さないと間違って伝わりやすい。
 
 ポジティブに表現する前に、事実確認で少し掘り下げるのは問題ない。
+
+どういう反応を求めているのか、相手に聞いてみるのは？
+
+反応が思いつかなくて気まずかった話題は覚えておいて、ポジティブな返しを考える。
