--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -55,6 +55,8 @@
 - さっぱりしている
 - 愛が深い
 - 癒される
+- フォーマル / カジュアル
+- 男性的 / 女性的
 
 ## 一時的なもの
 
@@ -73,3 +75,5 @@
 - 悪いところ、嫌いなところ
   - 直してほしいところ
 - しそうなこと
+
+## その他
