--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -130,3 +130,7 @@
 関心を示すにも度合いがある。分けたほうがいいか。
 
 前のめりになったり、目を見開いたりするのも関心を示す。
+
+目を合わせて微笑んだり、話や姿を覚えたり、頷いたりするだけでも十分に関心は示せる。
+
+亜情を持ってないのが伝わってしまっているとよくない。
