--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -35,3 +35,5 @@
 ポジティブなのは幸せの要素の一つ。
 
 やりたいことは、基本的にこれまで達成してきたこと、ドーパミンで快楽が得られたことでしかない。やりたいことを作りたかったら、小さな成功を繰り返してドーパミンを求めるようにしたらいい。でも、ドーパミンは得られなくなったら不幸になる。
+
+幸せじゃなくて動けない時はとりあえず散歩と甘味。
