--- a/shared/engagement/愛着障害.md
+++ b/shared/engagement/愛着障害.md
@@ -1,6 +1,14 @@
+- 安定
+- 不安: 捨てられることに対する過度な不安や依存を示す
+- 回避: 親しくなることに対する過度な独立を示す、感情を抑え込みやすい
+- 不安＆回避
+
 結局、他人を恐れる気持ちが強いと他人の影響に対する抵抗も大きいので、恐れを克服しないと愛着の問題は解消しないかも。
 
 愛着障害を克服するなら、親との関係は忘れて、一から習慣を作り直さないといけない。
 
 愛着がないこと自体は問題ではない。
 愛着があるように見せられていなくて、人間関係や仕事に影響が出て初めて「障害」と呼ぶ。
+
+回避だけならその人にとってはそれでいいってことが多い。
+不安が入るとカオス。
