--- a/shared/popular/魅力.md
+++ b/shared/popular/魅力.md
@@ -25,3 +25,6 @@ Attraction
 エンタメみたいに遠目で見るものとか、遠い存在には別に愛や情は必要ないし、わからない。
 
 技術的な上手下手は魅力の一部でしかない。最終的には魅力があれば技術がなくても十分ということもある。
+
+何を考えているか知りたい、というのも魅力。
+あえてミステリアスな部分があってもいい。
