--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -391,3 +391,8 @@ https://x.com/ggnka_icha/status/1810274912759918858
 批判しない。
 
 尊重には「相手を怒らせない」という感覚もある。
+
+介入しないってことかも。
+とはいえ度合いもある。
+
+舐めているのと気を抜いているのは似てるけど違う。
