--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -1,5 +1,7 @@
 # Sexy
 
+色気。
+
 時代や地域によっても差がある。
 
 太っていることが富の象徴であったり、富裕層の服装の流行りも違ったりする。
@@ -14,6 +16,7 @@
 
 性的魅力の特徴としては、自分の子供を産んで育てられること、子孫も子供が作れる（モテる）こと。
 
+- 子供っぽくない
 - モテそう
   - 顔がいい
   - 金持ち
