--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -389,10 +389,14 @@ https://x.com/ggnka_icha/status/1810274912759918858
 比較しない。
 評価しない。
 批判しない。
+介入しない。
 
 尊重には「相手を怒らせない」という感覚もある。
 
-介入しないってことかも。
-とはいえ度合いもある。
-
 舐めているのと気を抜いているのは似てるけど違う。
+
+舐めている人は恩を返さない。
+
+受け取ってばかりだとその人の行動に対価を払う価値がないように見える。
+
+相手のしてくれたことに対して、無視したり、そもそも気づかなかったりするのは尊重してない。
