--- a/shared/respect/尊重を示す.md
+++ b/shared/respect/尊重を示す.md
@@ -2,6 +2,8 @@
 
 次のような振る舞いは相手の自尊心を高める。
 
+- 関心を示す
+- 興味を示す
 - 笑顔で声をかける
 - 笑顔で手を振る
 - 名前を呼ぶ
@@ -26,6 +28,7 @@
 - 相手の話をする、相手の話を聞く
 - 主観もまたある種の事実として扱う
 - 気を遣う
+- 迷惑をかけたら謝る
 
 尊重を示すためには、まず無視しないこと。反応を返すこと。できれば言葉だけじゃなくて、上着を着たり震えたりしてたら「寒いの？」とか、くしゃみしたら「Bless you」とか、関心を示すといい。
 
