--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -23,16 +23,20 @@
     - 服が高そう
     - 服飾品が高そう
 - 健康
-  - 若い
   - よく笑う
   - 姿勢がいい
-  - 尻が大きい
-  - 胸が大きい
   - 顔色がいい
   - 肌つやがいい
   - 鍛えられている
   - 背が高い
-  - 痩せすぎていない
+  - 太りすぎていない
+  - 子供を産める
+    - 若い
+    - 成熟している
+    - 痩せすぎていない
+  - 子供を育てられる
+    - 尻が大きい
+    - 胸が大きい
 
 性的興奮を感じるかどうか。
 
