--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -3,3 +3,7 @@
 こだわりは理由があるわけではないので、他人が口出ししても意味がない。ただ、他人に迷惑をかけているなら当然敵対される場合もある。
 
 こだわりは時に合理的でない。むしろ合理的でないことの方が多い。
+
+自分自身はこだわりがなくても、どういう属性があるか考えることで、利用者がどの点を重視しているか考えることはできる。
+
+こだわりがある人が選ぶブランドになるとファンがつく。こだわりが弱い人は熱心なファンにはならない。
