--- a/shared/human/being/well/孤独.md
+++ b/shared/human/being/well/孤独.md
@@ -18,3 +18,5 @@
 
 動き出しは一人が最も早い。
 ただ、動き出しが早くても動きが速いとは限らない。遠くに行きたいなら、早さより速さが大事。
+
+周りに人がいないのに気づいたら、人ともっと関わっても良いし、気にしなくてもいい。生きていけるならどっちでもいい。まぁ、人と関わるのが苦じゃないなら友人はいた方が便利。
