--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -10,9 +10,6 @@
 
 ## その他
 
-自分を愛する。
-Love の文脈。
-
 自分に優しく、他人にも優しく。
 
 ただ自分を愛するだけじゃなくて、余裕を持って周りのことも受け入れられるといい。
@@ -43,3 +40,8 @@ Love の文脈。
 別に自分が好きじゃなくてもそこにいていい。
 
 自分を好きになろうとする、自分の良いところを見つけようとするのは自己肯定感かな。
+
+Respectの文脈。
+自分を愛する、というところまで行かなくてもいい。
+
+自己肯定感というのは単に「私はここにいる」というだけ。
