--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -1,5 +1,16 @@
 # Influence People
 
+## 自分にできること
+
+- 布教する
+  - 自分が好きなものを楽しそうに話す
+- 支援する
+  - 障害を取り除く
+    - 準備を手伝う
+    - 環境を整える
+
+## その他
+
 人を動かすのは理よりも情。
 
 人を動かすには、人を知らないといけない。
@@ -58,3 +69,23 @@ SNSなどで間接的に情報を得て影響を受けることもある。
 
 対して何かを「しろ」と言うのは喜びの感情。
 褒めるだけでも通じる。
+
+力づくで他人は変えられない。
+
+他人を変えたかったら、相手に自分自身が変わる力を与える。
+そして、どのように変わればいいのか、期待や信頼を伝える。
+
+何かを変えるより、まずはできていることに目を向けさせる。
+勇気を与えるのが先。
+
+相手を変えるために社会性の動物に備わっているのが喜びと怒りの感情。
+ただ、現代では怒りの感情をそのまま発するのは卑しいこととされて、社会的に排除される場合が多い。もっというと軽視されてむしろ逆効果になりやすい。
+感情としては喜びや怒りであっても、相手がこちらの要望を聞き入れて行動を変えてくれるような形で表現するのが大事。
+
+人を変えるのは難しいけど、不可能ではない。そもそも人は変われる。変われるのが人だ。
+でも、人を直接変えようとしても変わらない。人を変えたかったら、間接的に影響を与えないといけない。自分ができることの一つは、障害を取り除くこと。
+
+監視する（してほしいこと以外、特にしてほしくないことを妨害する）、
+教育する（してほしいことを後押しする）、
+障害を取り除く、
+の三段階がある。
