--- a/shared/lifestyle/meal/栄養.md
+++ b/shared/lifestyle/meal/栄養.md
@@ -1,8 +1,8 @@
-- 炭水化物
-- 蛋白質
-- 脂質
-- ビタミン
-- ミネラル
+- 炭水化物: 使いやすいエネルギー
+- 蛋白質: 体を作る
+- 脂質: 高エネルギー
+- ビタミン: 体を治す
+- ミネラル: 体を動かす
 
 人間は食べたものの栄養をそのまま使っているのではなくて、体内で生成するものもある。
 
@@ -34,3 +34,6 @@
 古い油よりは新鮮な油の方がいい。ナッツとか、鮮魚とか、オリーブオイルとか。
 
 ミネラルは英語で鉱物のこと。一番重要なのは塩。
+
+夜は炭水化物よりも肉。
+炭水化物はすぐ使えるエネルギーなので、夜は別にいらない。
