--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -400,3 +400,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 受け取ってばかりだとその人の行動に対価を払う価値がないように見える。
 
 相手のしてくれたことに対して、無視したり、そもそも気づかなかったりするのは尊重してない。
+
+自分で自分を舐めている、自己肯定感がない人は、他人からも舐められやすい。
