--- a/shared/satisfaction/tips/完璧主義.md
+++ b/shared/satisfaction/tips/完璧主義.md
@@ -36,3 +36,9 @@
 ただ、マイナスにはならないようにする。
 
 完璧主義とネガティブを切り離せば、完璧主義は強みになる。
+
+プライベートでうまくやろうとしている人がいると疲れる。
+技術を求めるよりも原則に従う。
+
+完璧主義より前に、うまくやろうとしている。
+うまくやろうとしなくて良いこともたくさんある。
