--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -34,3 +34,8 @@
 このようなある種の「裏切り」がボケにつながる。
 「驚き」と言ってもいいかも。驚きが瞬間的な緊張を生む。
 ただ、驚きっぱなしでは笑いにならない。ボケの行き過ぎた緊張をツッコミで緩和する漫才の形もある。
+
+「本当に面白い人って「お笑い担当」って認識されない」
+「そうだね、「お笑い担当」は滑る人だから」
+「そう、がむしゃらにやって滑ってる人が「うちのお笑い担当だから」って言われてるわ」
+https://youtu.be/h4xYHWFCQ3c?si=xkv2bJAwKu9mGL2s
