--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -9,3 +9,7 @@
 もっというと選ばれない覚悟を持つ。選り好みしない方が選ばれるための母数が多い。
 
 自分が恋人を選ぶのと同じように、相手も恋人を選んでいる、という事実を忘れずに。
+
+恋愛してなくても充実している人は攻略するのが難しいけど、精神的に安定しやすい。男女ともに。やっぱり暇だと不安定になりやすい。
+
+同性から嫌われていて、同姓の友人がいない人はやばい。特に女性。
