--- a/shared/finance/資本.md
+++ b/shared/finance/資本.md
@@ -52,3 +52,14 @@
 時間はリソースではない。
 
 資本には資産を含む。
+
+日本語では capital も資本ということがある。
+
+capital はどちらかというと「元手」が近い。
+最初に拠出した分。
+負債も含まれることがある。
+
+元手がないと経営者になるのは難しいので、まずは労働者である程度元手を作らないといけない面はある。
+
+ない袖は振れない。
+時間がなかったら今ある資本でなんとかするしかない。
