--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -139,3 +139,5 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 お店は偉大。やはりお金を払わないと責任を伴う仕事にならない。お店にお金を払って品質を保証してもらう。
 
 他人のことは自分に関係ないのでどうとでも言える。
+
+基本的に人間は責任を回避しようとする。特に女性。例えば「察してほしい」のはお願いすることで責任が生じるから。
