--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -45,3 +45,6 @@
 異性として意識してもらうには下心が必要か？
 
 女の子なんてほとんど可愛い。一番の「ブス」は負のオーラだ。たまに街中で本当に陰気な顔のおばちゃんとかいる。この世の全てを憎んでいるような顔をしている。
+
+股間の毛が少ないのは未熟な時期の特徴なので、その方がいいって人はロリコンかも。
+ただ、毛がボサボサになっているのは歳をとりすぎた象徴とも言える。
