--- a/shared/communication/media/language/言葉遣い.md
+++ b/shared/communication/media/language/言葉遣い.md
@@ -60,3 +60,6 @@
 
 攻撃的というか、ショッキングな言葉遣いは引かれてやすい。
 語彙が攻撃的だと、それを抑えようとして無駄なリソースが割かれるので、普段から穏やかな言葉を使うべき。
+
+「お互いが疑い合っている」ことを、「人狼が始まった」で表せる。さらに「私占い師です」でも表せる。
+「私占い師です」は占い師COするという人狼でよくある所作を模すことで人狼を表している。
