--- a/shared/execution/prompt/指示.md
+++ b/shared/execution/prompt/指示.md
@@ -80,3 +80,5 @@ https://www.nikkei.com/article/DGXZQOUD198KF0Z11C24A2000000/?n_cid=SNSTW005
 考え方を具体的に指示することでより精度の高い作業ができる。
 
 指示や指摘は「自分が」相手にそうしてほしいのであって、世間や第三者に責任をなすりつけてはいけない。
+
+指示する場合はどういう状態にしてほしいのか明確にして、十分な準備期間と予算を用意して、任せた人がちゃんと検証できるようにしないといけない。検証方法がわからない人ならそれも教えるか、わかる人に頼む。
