--- a/shared/human/body/muscle/training/tips/跳躍力を鍛える.md
+++ b/shared/human/body/muscle/training/tips/跳躍力を鍛える.md
@@ -1,3 +1,12 @@
 https://www.youtube.com/watch?v=GQjyA1sM9pM
 
 跳躍力は全身、特に下半身の瞬発力とフォームが大事。
+
+1. 踏み込みの前で速度を落とさない
+2. 踏み込みで腰を落とさない
+3. ペナルティメイトステップ（最後から2歩目）まで強く踏み込む
+
+https://youtube.com/shorts/6L2Ta_jnp9E?si=BS3HZZCs_mFIyciE
+
+走り込んでジャンプする場合、前の足がブロックフット、後ろの足がペナルティメイトステップという。
+あるいは最後に前への速度を上への速度に切り替える足と、最後から2歩目の足、といってもいい。
