--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -167,3 +167,7 @@ well-known, よく知ること。
 何を見ればいいか。
 
 即レスは知性っぽさもある。
+
+他の人がいちいち覚えてないどうでもいいことを覚えておくだけで記憶力があるように演出できる。
+
+頭がいいというのはより複雑なものをより高速に扱えることがまずベース。ざっくり言えば作業机のでかさと手の速さ。
