--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -56,3 +56,5 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 相手を知るだけじゃなくて、理解するとはどういうことか。
 
 完全に理解することをつまらないと思っている節もある。
+
+基礎知識があると知らないものもそれに当てはめて理解しやすい。思考の時間がかかるので、最終的には反射的に理解できるまで練習したほうがいい。
