--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -35,6 +35,7 @@
 - 性格や価値観
   - 子どもは何人欲しいか
 - セックスの相性
+  - セックスのタイミング
   - セックスの頻度
 
 体の相性で大きいのは、セックスの頻度。
@@ -53,3 +54,6 @@
 
 恋愛は軽く考えていい。
 まだ恋人でもないし。
+
+付き合ったからすぐセックスするものでもない。
+ただ、恋人になる前にはセックスも試しておくべきだし、お互いの頻度やタイミングが合うかどうかも大事。
