--- a/shared/sex/dating/恋愛経験.md
+++ b/shared/sex/dating/恋愛経験.md
@@ -8,3 +8,6 @@
 恋愛は恋人になるまでの過程でしかない。
 
 何度も結婚に至っては離婚している人は恋愛経験が豊富と言えるけど、経験の割に上手くなってないとも言える。経験があるからといって実力があるかどうかは別。良い人と恋人になれてない。
+
+セックスの経験と恋愛の経験は違う。
+デートせずにセックスばっかりしている人を恋愛経験が多いとは言えない。
