--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -30,9 +30,12 @@
   - 先に話しかける
 - 歩くペースを合わせる
 - 食べるペースを合わせる
+- 褒める
+- 励ます
 - 驚かせない
   - 急に大きな音を立てない
 - 相手がしたいと思っていることを、自分からやりたいと言う
+- 腰が引けていることに対して理由を与える
 
 ## その他
 
@@ -170,3 +173,5 @@
 座ると落ち着いちゃうから気遣いするなら立ってた方がいいかも。
 
 施し。
+
+こっちのせいにしてあげる、理由をあげるのも気遣い。
