--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -183,3 +183,5 @@ discovery, 発見・探索も関連する。
 規格が決まっているものはそれに向かって一直線に作るだけでいい。開発の余地がない。開発というよりは、規格通りに製造するだけ。
 
 自分が嫌いだからこそ変わろうとする面もある。
+
+技術ばかりでなくその応用まで知ることで、技術に新たなアイデアが入って発展することもある。広い知識を持ったほうがいい。
