--- a/shared/family/children/妊娠.md
+++ b/shared/family/children/妊娠.md
@@ -1,5 +1,4 @@
 一回の性行為で妊娠する確率は 20 代で 30% くらいと言われている。
-
 30 代以降は妊娠しにくくなる。
 
 - https://belta.co.jp/pregnancy/30s_40s/
@@ -14,3 +13,9 @@
 
 古くて多い精子よりも、新しくて少ない精子の方が妊娠率は高い。
 https://nazology.kusuguru.co.jp/archives/190046
+
+妊婦は週に500g近く体重が増える。
+最終的には太っている人でも5kgくらい、痩せている人だと15kgくらい増えることがある。
+胎児は3-4kgだけど、妊婦自身も太ったり、羊水の重量もあったりして、それ以上に増える。
+
+妊婦のお腹を持ち上げるスキンシップ。
