--- a/shared/voice/training/exercises/リップロール.md
+++ b/shared/voice/training/exercises/リップロール.md
@@ -99,3 +99,5 @@ https://youtu.be/CJQRga_MxjQ?si=alWDmYbCHVLSAlef
 
 有声音のリップロールと無声音のリップロールがある。
 また、有声音の中でも重いのと軽いのがある。
+
+重いリップロールは重さの割に大きな声にならないので、家での練習にも使える。
