--- a/shared/art/history/美術史.md
+++ b/shared/art/history/美術史.md
@@ -6,3 +6,5 @@ https://ja.wikipedia.org/wiki/%E7%BE%8E%E8%A1%93%E5%8F%B2
 ルネッサンス以降もまだ宗教画中心ではあるけど、ギリシア的な人体の美しさを強調するような作風が増える。
 モネやミレーの時代に風景や日常を題材にするものが増えて、デフォルメも進んだ。この時代にチューブ式で持ち運びできる絵の具が開発されている。
 ピカソあたりから現代美術に近づいて、ルールが結構曖昧になってる。美術の形や色の面白みが重視されている。
+
+[【西洋美術史】5000年の歴史を15分に凝縮!!心配になるくらい簡単にまとめてみました。 - YouTube](https://youtu.be/dal9JyUraig?si=JpDa9sSnj6GDlzBU)
