--- a/shared/game/competitive/優位性を示す.md
+++ b/shared/game/competitive/優位性を示す.md
@@ -34,3 +34,5 @@
 女性に対してオドオドしてる男でも単に女と目を合わせるとキィキィ言いながら威嚇したり荷物に手を突っ込んできたりするから目を合わせないだけで、正直女のことはバカだと思ってる。だから、女子側から格上とか格下とかって考えるのがもうおもろい。
 
 優位性を示すのはマウントだけじゃない。
+
+相手を見下すってことは相手を人として見ている部分があるので、ある程度の情はある。
