--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -7,3 +7,7 @@
 自分自身はこだわりがなくても、どういう属性があるか考えることで、利用者がどの点を重視しているか考えることはできる。
 
 こだわりがある人が選ぶブランドになるとファンがつく。こだわりが弱い人は熱心なファンにはならない。
+
+こだわりの極地が創作。選ぶだけじゃなくて、作る。
+
+こだわりが強い人は気分屋が多い。
