--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -13,3 +13,37 @@
 恋愛してなくても充実している人は攻略するのが難しいけど、精神的に安定しやすい。男女ともに。やっぱり暇だと不安定になりやすい。
 
 同性から嫌われていて、同姓の友人がいない人はやばい。特に女性。
+
+問題がある人の特徴:
+
+- すぐ感情的になる
+  - ものに当たる
+  - 暴力を振るう
+  - 自称行為をする
+- 束縛が激しい
+- 重要なことを隠している (借金など)
+- 話をすり替える
+- 人を見下す、自慢する
+- 他人の成功を妬む
+- すぐに「別れる」と脅す
+- 依存しすぎる
+- 部屋が過度に汚い
+
+https://x.com/cocone_sama/status/2016438850978254874?s=12
+
+- 連絡頻度
+- 返信のタイミング
+- お金の使い方
+  - 奢りの感覚
+- 記念日への温度感
+- セックスの頻度や重要度
+- スキンシップの量
+- 異性との距離感
+- 一人時間の必要量
+- 喧嘩した後の向き合い方
+- 感情表現が言葉か行動か
+- 仕事の優先度
+- 結婚や出産の温度感
+- 大切にされていると感じる瞬間
+
+https://x.com/yumene_love/status/2016643430315921460?s=12
