--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -361,3 +361,5 @@ workは意味の文脈、loveは価値の文脈。
 働かせる、エネルギーを取り出す、力を溜める、効率よく力を使う、パフォーマンス、パフォーマンスの低下、パフォーマンスの回復、動かす、止める。
 
 「早く行きたいなら一人で行きなさい。遠くまで行きたいならみんなで行きなさい。」（アフリカのことわざ）
+
+方法にこだわらず、成果にこだわる。
