--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -30,8 +30,14 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 
 女性は「最悪この男性に孕まされても大丈夫か」を考えて男性と接する。無意識レベルで。
 
+女性は必須脂肪が多く、体脂肪率15%を切ると生理不順など健康に悪影響がある。
+一般的な女性の体脂肪率は30%弱。いわゆるモデル体型と言われるくらいでも20-25%はある。男性より10%くらい多いと考えるとちょうどいい。なんならアメリカだと30%以下は人口の10%しかいない。
+
 ## その他
 
 生物的には、卵子（大きく移動性の低い配偶子）を持っているほうがメスで、そうでないほうがオス。
 タツノオトシゴみたいに受精して卵を作るところまではメスがして、オスが卵を抱える種もいる。
 虫の中にはメスが交尾器をオスに挿入して精子を受け取る種もいる。
+
+男女で体の重心が結構違う。
+https://x.com/vismoglie/status/2016658222862540809?s=46
