--- a/shared/feeling/感じ方.md
+++ b/shared/feeling/感じ方.md
@@ -38,3 +38,5 @@ https://youtu.be/Ub5CTXX24RM?si=yCoq02EHU9_K8gnl
 何かを感じたとき、いきなり印象を持ちがち。
 はしゃいでる人を見たら「元気だなぁ」とか。
 印象には元となったなんらかの事象があるので、「なんでそう感じたか」を逆に辿ると自分の感じ方の癖を知れる。
+
+推定を挟まない特徴、観察によって直接得られた情報がまず大事。いきなり印象や感想のことだけ考えない。
