--- a/shared/people/人を見る.md
+++ b/shared/people/人を見る.md
@@ -104,3 +104,24 @@
     - 歳の差は？
     - 性別は？
     - 親しいか
+
+怪我、顔、顔つき、しわ、を顔色、呼吸が荒い、咳やくしゃみ、美容、肌につやがある、髪、白髪、薄毛、伸びている、伸ばしている、艶がある、染めている、髪飾り、化粧、肉体、体格、太っている、痩せすぎている、身なり、男性的、女性的、フォーマル、着飾っている、制服、スーツ、学生服、厚着、薄着、靴、メガネ、腕時計、指輪、鞄、旅行鞄、スマホ、キーホルダーやスマホケース、イヤホンやヘッドホン、その他の持っているもの、荷物の量、荷物の内容、食事の量、食事の内容、食事の作法、姿勢、猫背になっている、言語、方言、口調、口癖、移動している、早足、歩き方、座り方、人との接し方、キョロキョロしている、誰と一緒にいるか、車椅子やベビーカー、いつ、どこにいるか、など。
+
+さらに推測できることも多い。
+話すことによってもさらにわかることがある。
+
+昼間から美術館に来ているような人は、有給か、働いてない暇人か。
+
+関係性を感じさせる特徴
+
+- 話している
+- 話しかけている
+- 顔を向けている
+- 目を合わせている
+- 年代が近い
+- 格好が似ている
+- 追いかけている
+- 体に触れている
+- 手を繋いでいる
+- 体を向けている
+- 頭を寄せている
