--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -183,3 +183,7 @@ loveもworkも利害関係は別で、careにあるのかも。
 複数のことに関心を向けようとすると、一つ一つの割合は減っていく。
 
 八方美人は誰に対しても関心が薄いからこそ成立する。
+
+関わりがあるからこそ、失われたら悲しむ。
+
+情と関心はほぼ同じと考えていい。先行きに注意を払うこと。失われたら悲しむこと。
