--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -9,6 +9,7 @@
 - 嘘をつかない
 - 相手を喜ばせようとしない
 - できれば同じ内容を使いまわさない
+- 相手が流しやすいようにすぐ別の話を振る
 
 褒め、賞賛、称賛、感嘆、賛美
 
@@ -158,3 +159,7 @@ pleasure.
 ただ、何度も言われていることになりやすいので差別化するのが難しい。
 
 褒める時は相手に反応させない。褒められた時の反応は結構負担。
+
+人を褒めた後はそのまま相手に話を振るのが大事。褒めを受け取らせると気後れしやすいので、流しやすいようにするのが気遣い。
+褒めた後の展開まで考えてから褒める。
+カラオケで誰かが歌った後とか、盛り上げるための「ガヤ」の時はそこまで考えなくていい。会話じゃない。
