--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -49,3 +49,5 @@
 もっと顔を上げて人を観察するべきなのかも。結構遠慮しちゃうからな。
 
 人を観察してて「どうかした？」みたいに聞かれる場合は、そのとき考えてたことを素直に言うと話題になる。「印象的な顔だと思うけど何がそれを構成してるんだろ、って考えてました」とか。「顔ちっちゃいなぁって思ってました」とか。
+
+自分の場合、漢字を聞くのが人の名前を覚えやすい。文字記憶タイプかも。
