--- a/shared/human/being/well/幸せな人の振る舞い.md
+++ b/shared/human/being/well/幸せな人の振る舞い.md
@@ -5,3 +5,5 @@
 お金がなくても、店員さんに笑顔でお礼を言うとか、同僚に挨拶して自分から話しかけるとか、ちょっとしたことでも与えられる。
 
 「何を与えられるか」を知っておくのは良いことだ。
+
+幸せな人には、セロトニンでのんびりしている人と、ドーパミンでギラギラしている人と、オキシトシンでイチャイチャしている人がいる。
