--- a/shared/humor/おしゃれ.md
+++ b/shared/humor/おしゃれ.md
@@ -17,3 +17,6 @@
 トレンドを作る。周りを観察して、むしろトレンドが大衆化する頃には別の方に向かう。結果的に流行に合っているように見える。
 
 おしゃれはファッションとかの前に、美意識の意思表示。
+
+おしゃれは総合力。
+髪、顔、服、靴、鞄、などの組み合わせがおしゃれ。全体の雰囲気を合わせないとおしゃれじゃない。
