--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -190,3 +190,7 @@ Lose-WinをLose-Loseに持ち込む。
 商売で限界まで振り絞るのはバカがやることだ。商売は勝利を目指すものではなく、独占を目指すものだ。
 
 本当に頂点で勝つには限界まで振り絞るしかない。きつい思いをせずに勝つことはできない。
+
+戦いは生存競争。勝負ではない。
+
+争いって考え方もwarにまとめちゃっていいか。競合とか競争も。でも競争はgameでも良いかも。
