--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -186,4 +186,4 @@ loveもworkも利害関係は別で、careにあるのかも。
 
 関わりがあるからこそ、失われたら悲しむ。
 
-情と関心はほぼ同じと考えていい。先行きに注意を払うこと。失われたら悲しむこと。
+情と関心はほぼ同じと考えていい。先行きに注意を払うこと。失われたら悲しむこと。ある程度特別扱いの要素が含まれる。
