--- a/shared/society/社交辞令.md
+++ b/shared/society/社交辞令.md
@@ -1,3 +1,4 @@
+社交辞令。
 お世辞。
 
 社交辞令であっても、誘ったり誘われたりするなら、乗っかってもいい。関係を切りたいとまで思わないならとりあえず社交辞令を言っておくし、乗っておく。しかし、関係を切りたいなら言わない。
@@ -16,3 +17,5 @@
 
 社交辞令を言うのも関係を続けたい人だけにする。
 どうでもいい人に社交辞令を言って本気に取られても困る。
+
+お世辞や社交辞令はユーモアを示すものでもある。下手なユーモアに価値はない。形だけ真似てもダメ。
