--- a/shared/love/interesting/興味を示す.md
+++ b/shared/love/interesting/興味を示す.md
@@ -26,3 +26,7 @@
 
 全ての人に興味を示すのは無理があるので、人数を絞るのも大事。
 とはいえ覚えられるなら覚えておいて損はない。
+
+おすすめの話とかは区切りのいいところでメモして終わりにするのもいい。
+
+相手のおすすめとかはすぐにスマホを取り出して調べながら聞くとか、メモするとかすると興味を示しやすい。
