--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -163,3 +163,6 @@ pleasure.
 人を褒めた後はそのまま相手に話を振るのが大事。褒めを受け取らせると気後れしやすいので、流しやすいようにするのが気遣い。
 褒めた後の展開まで考えてから褒める。
 カラオケで誰かが歌った後とか、盛り上げるための「ガヤ」の時はそこまで考えなくていい。会話じゃない。
+
+良いものは、それを選んだ人のセンスも褒める。
+「センス良すぎ」「天才」とか。
