--- a/shared/voice/声の属性.md
+++ b/shared/voice/声の属性.md
@@ -1,9 +1,34 @@
+## 結果
+
+- 声量
+  - 息の強さ: 息の圧
+  - 声の強さ: 声帯の張力
+- 声質 (響き)
+  - 重さ: 声帯の鳴りの強さ
+  - 硬さ: 声帯にかかる力の強さ
+  - 太さ: 息の量
+  - 息漏れ
+  - がなり: 仮声帯の鳴り
+- 安定性
+  - 息の安定性
+  - 声帯の位置の安定性
+- 高さ
+  - ピッチ
+  - キー
+- テンポのずれ
+  - 走り
+  - 溜め
+
+## 過程
+
 - ポジション
 - トーン
   - テンション（キー）
 - ピッチ
 - タメ
 - 声色（雑音の混ざり具合、響き）
+
+## 英語
 
 トーンというと単にピッチよりは声色もある程度混じったイメージ。明るさや強さも含む。
 
@@ -12,3 +37,7 @@
 息の圧が強さ、
 息の量が太さ、
 声帯の鳴りが重さ、
+
+声が不安定に揺れるとハスキーボイスだったり弱々しい声になったりする。
+
+声帯のテンションが
