--- a/shared/care/attention/tips/理解を示す.md
+++ b/shared/care/attention/tips/理解を示す.md
@@ -4,3 +4,9 @@
 単におうむ返しするだけでもいい。
 
 理解とは、予測できること。よく知ることではない。モデリングが大事。
+
+「なんでもいい」「どっちでもいい」みたいに相手に判断を任せるのは、相手を理解していないということでもある。
+もちろん全てわかるってことはないけど、わかる努力を見せる。
+あと単純に責任を押し付けている面もある。
+
+仕事を任せるときは細かい判断を任せる。
