--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -208,3 +208,8 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 関心のベースは利害関係。
 今後も関係があるから見ておく、という感覚。愛とは違う。
+
+関心には優先順位がある。全てを一度には見れない。
+
+関心が高いものは優先順位が高い。
+判断には行動が伴うべき。特別さは行動によって示す。
