--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -192,3 +192,6 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 相手を見て、例えば体調が悪かったら重い食べ物よりお粥にするとか。
 
 道に子どもがいたら動きを予測するのと同時に、どう動いてもいいようにスピードを落とすのが配慮。
+
+良いものを長く使うことに慣れるのが基礎。
+ただ、まずは良いものを選ぶのが基本。ある種のこだわり。
