--- a/shared/decision/不安.md
+++ b/shared/decision/不安.md
@@ -19,3 +19,9 @@
 不安と生きるか、理想と生きるか。
 
 不安は不快の一種。
+
+自分がどう見られるか、嫌われないか、上手くできているか、は重要じゃない。
+知ることができないことは気にしてもしょうがない。
+逆に、気になることは「どうしたら測れるか」「何が指標か」を考えないといけない。
+
+周りを見渡しても目が合わないなら、誰も自分を気にしてない。
