--- a/shared/voice/training/tips/声の雑音を減らす.md
+++ b/shared/voice/training/tips/声の雑音を減らす.md
@@ -1,3 +1,12 @@
+## 雑音の原因
+
+- 裏声（息が漏れている）
+- 鼻声（鼻に息が抜けている）
+- がなり（仮声帯が鳴っている）
+- ホイッスル（声帯以外の部分で余計な気流が作られている）
+
+## その他
+
 声帯を核に鳴らす。
 鼻や喉が狭くなると余計な音が鳴る。
 
@@ -20,3 +29,5 @@
 
 まずは声道を広げて、声帯と呼吸だけで声を出すのが基本。
 喉の位置はまずは高くても低くてもいい。
+
+地声が柔らかくなれば、裏声や鼻声で雑音を混ぜて柔らかくする必要がない。
