--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -136,7 +136,9 @@
 
 [プロが成婚を止める離婚の確率が高い危険サインを10個教えます - YouTube](https://youtu.be/i1p7XdtgcvI?si=VRJupZ5gPHY2tx8I)
 
-結婚は恋人以前に、家族になるための契約。
+結婚は恋人以前に、家族になるための契約、法制度。
 
 結婚自体は恋人でなくてもできるけど、今のところ異性が対象。
 異性の友人と家族になることもできる。
+
+結婚と恋愛は違うけど、恋人になったら普通は結婚するもの。
