--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -63,3 +63,8 @@
 早めにタメ口にする。
 
 人間は責任を避けるものなので、恋とかの生理現象で勢いをつけた方が恋人になりやすい。
+
+子供の頃から恋人を選ぶために恋愛して、そのまま大人になったら子どもを作ることもある。
+
+恋愛は恋人を選ぶ期間なので、見返りを求めるものではない。
+相手が返してくれないなら単に切る。
