--- a/shared/humor/おしゃれ.md
+++ b/shared/humor/おしゃれ.md
@@ -20,3 +20,7 @@
 
 おしゃれは総合力。
 髪、顔、服、靴、鞄、などの組み合わせがおしゃれ。全体の雰囲気を合わせないとおしゃれじゃない。
+
+まず顔と髪と体（シルエット）で合わせるが、シルエットは服で変えることもできる。
+服と靴と鞄はセット。
+全体として合っているのが大事。あえて外すとしても致命的にならないのを一つとか。
