--- a/shared/trust/intimacy/tips/離れた方がいい人.md
+++ b/shared/trust/intimacy/tips/離れた方がいい人.md
@@ -1,10 +1,16 @@
-- 誰かを否定する
-  - 誰かを無視する
-    - 誰かの考えたことを無視する
-    - 誰かの感じたことを無視する
-  - 誰かの好きなもの、好きなことを否定する
-- 謝るだけで罪を償わない
-- 自分の責任を他人に押しつける (他責思考)
+- 敬意がない
+  - 誰かを否定する
+    - 誰かを無視する
+      - 誰かの考えたことを無視する
+      - 誰かの感じたことを無視する
+    - 誰かの好きなもの、好きなことを否定する
+- 謝意がない
+  - 感謝を伝えない
+  - すぐに関係を切ろうとする、関係を質に入れる
+  - 謝るだけで罪を償わない
+- 好意がない
+  - こちらを知ろうとしていない
+- 責任を他人に押しつける (他責思考)
 
 盗みと詐欺は論外。
 
