--- a/shared/decision/planning/計画づくり.md
+++ b/shared/decision/planning/計画づくり.md
@@ -1,5 +1,6 @@
 # 計画づくり
 
+段取り。
 計画を立てること。
 
 計画づくりは思考の一種。
@@ -51,3 +52,5 @@ https://dev.classmethod.jp/articles/load-to-pm-01-gather-all-todos/
 たとえば運河を作るなら、一気に全部作るんじゃなくて、優先順位の高い地域を先に完成させて、早い段階で使い始める。建材の運搬に使う場合もある。無計画に進めると労働者の負担が大きくなって反乱される。
 
 計画作りは分析でもある。
+
+暇すぎると人は段取りを捨ててしまうので、暇な時間を区切るように強制的に何か人に会う用事を入れるとかして段取りが必要になるようにした方がachievementとしては良い状態。
