--- a/shared/family/marriage/不倫.md
+++ b/shared/family/marriage/不倫.md
@@ -1,3 +1,5 @@
+単なる浮気と違って、不倫は法的な罰則がある。
+
 浮気しても別に性病と子供の遺伝子の検査してくれるなら全然いいと思う。実際に目の前にしたらどうかわからないけど。
 
 恋人に言えないことをしたら浮気。わかりやすい基準。
@@ -16,3 +18,5 @@
 男の場合、女が浮気していると自分の子じゃない可能性がある。
 
 結婚・妊娠してないなら攻めてもいい。
+
+養育費や慰謝料を払わなくていいなら浮気されて離婚するのはまぁいい。浮気されたくはないけど、もし浮気されたらその時点でもう相手に興味ない。無料で子供を育ててくれるならそれでいい。
