--- a/shared/family/marriage/結婚する前に話しておくこと.md
+++ b/shared/family/marriage/結婚する前に話しておくこと.md
@@ -1,3 +1,8 @@
+- 離婚する場合にどうするか
+  - 慰謝料
+  - 養育費
+  - 親権
+  - 財産分配
 - 子どもの数
 - 性行為の頻度
 - お互いの小遣いをどうするか
@@ -9,3 +14,7 @@
     - 何%から考えるか
 
 出産については夫婦でよく話し合っておくべき。余裕のあるうちに。流産しそうになったら母体優先にするのか、無理してでも子供を生かすのか。障害を持つ可能性が高い場合に無理して生かすのか、出産の結果に任せるのか。
+
+結婚する前に離婚する場合の契約書を決めて弁護士に預けるべき。
+
+結婚するなら結婚をちゃんと理解してる人がいい。具体的には結婚前に離婚時の契約書を交わせること。使わなかったら一番いいけど、その上で結婚というのは法制度でしかないことを理解している人。
