--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -45,3 +45,6 @@ Respectの文脈。
 自分を愛する、というところまで行かなくてもいい。
 
 自己肯定感というのは単に「私はここにいる」というだけ。
+
+自分の良いところを探しても、自分を愛しても、他人から愛されても、自己肯定感は上がらない。
+愛ではなく、リスペクトが必要。あと自分ではなく、他人や環境を愛さないといけない。
