--- a/shared/respect/無視.md
+++ b/shared/respect/無視.md
@@ -1,3 +1,5 @@
+# Ignore
+
 一般的に「尊重」の対義語は「無視」とされる。
 https://thesaurus.weblio.jp/antonym/content/%E5%B0%8A%E9%87%8D
 
@@ -33,3 +35,6 @@ Twitter で誰かをブロックするような人は尊重の気持ちが欠け
 批判するのも称賛するのも関心がある。無視するのが一番良くない。
 
 大人にとっては悪いことであっても、子供には「関心を引く」こと自体がメリットになってしまうことがある。
+
+コミュニケーション自体を断るっていうのは無視で、リスペクトの精神には反している。
+ただ、関わりたくない相手も当然いるので、関わりたくないならきっちり関わらないのが吉。交際しているのにコミュニケーションしない、でもセックスはする、みたいなのは都合がいいと思われていて、結局は舐められている。
