--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -37,6 +37,7 @@ https://x.com/cocone_sama/status/2016438850978254874?s=12
   - 奢りの感覚
 - 記念日への温度感
 - セックスの頻度や重要度
+- セックスの相性
 - スキンシップの量
 - 異性との距離感
 - 一人時間の必要量
@@ -47,3 +48,8 @@ https://x.com/cocone_sama/status/2016438850978254874?s=12
 - 大切にされていると感じる瞬間
 
 https://x.com/yumene_love/status/2016643430315921460?s=12
+
+体の相性を確かめるのは恋愛において優先順位が低い。
+ただ、頻度がわかるくらいの期間は必要。
+
+女が男を求める方がうまくいく。でも男に求めすぎるとめんどくさくなって捨てられるので、自分からも与えながら求めるのが大事。男はそれに応えるだけの器が必要。
