--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -68,3 +68,7 @@
 
 恋愛は恋人を選ぶ期間なので、見返りを求めるものではない。
 相手が返してくれないなら単に切る。
+
+子連れのバツ持ちをターゲットにして、別の男の子どもを育てる代わりに自分の子どもも産んでもらうのはひとつの生存戦略。
+
+人間の恋愛で必要なのはセックスではなく、恋人を選ぶこと。だから価値観とかをよく話すのが大事。でも口ではどうとでも言えるので泊まりで旅行したりして行動も見るのが大事。
