--- a/shared/human/body/muscle/training/tips/腰を鍛える.md
+++ b/shared/human/body/muscle/training/tips/腰を鍛える.md
@@ -1,3 +1,6 @@
 椅子に座る姿勢で壁に両足を突いて仰向けに寝転がり、足をずらさずに腰を上げ下げする。
 下腹と尻に効く。
 https://x.com/rinoon8229/status/2012348222254027028?s=12
+
+膝立ちで少し体を後ろに傾けて、左右の手で交互に同じ方の踵を触る。
+https://x.com/tachu_muscle/status/2017878083810861384?s=12
