--- a/shared/sex/性欲.md
+++ b/shared/sex/性欲.md
@@ -26,3 +26,9 @@
 
 下心は恋心。
 恋心は下心。
+
+> 「求められたい」って言うけどさ、男が女を求めるのは100%性欲だよ。男が女に応えるのが愛情です。本当に心の底から面倒くさくて気乗りしないしだるいけど愛してるあなたがそんなに言うなら付き合ってあげる、これが男目線の特別扱いなんだよな。
+>
+> https://x.com/shiro_shirtmax/status/2017254341682634774?s=61
+
+男は応えることで愛情を示すのに、女は求められないことで不安になる。
