--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -249,3 +249,7 @@
 浮気とか常識はずれのことをしても友人に関係を切られるのは友人が常識を持っている時だけ。
 
 友人になるにはまず自分が気を抜くこと。一気に抜くとだめなので、徐々に。
+
+嫌だったこと、良かったこと、を気兼ねせずに伝えられるのも友人。
+
+愚痴を言うなら、同じくらい幸せなことも言わないと捨てられやすい。
