--- a/shared/perception/肯定.md
+++ b/shared/perception/肯定.md
@@ -1,5 +1,9 @@
 # 肯定
 
+- 無視しない
+- 比較しない
+- 評価しない
+
 肯定しても賛同しなくていい。
 賛同というのは Authority の問題。承認や権限。
 
@@ -74,3 +78,5 @@
 まぁ、嘘であっても相手はそう思っている、と仮定していい。どっちでも関係ない。
 
 賛同、権限を与えるのとは別。
+
+肯定の基礎は比較しないこと。
