--- a/shared/devotion/退屈.md
+++ b/shared/devotion/退屈.md
@@ -42,3 +42,7 @@ https://webtan.impress.co.jp/e/2024/09/27/47754
 暇を作る。
 
 退屈は動き始めるチャンスだ。
+
+程よく暇してないなら仕事や趣味に邁進してもいい。
+暇だったら他人と関わる時間を増やす。暇していると碌なことにならないので、新しい人間関係を広げる。
+忙しかったら大切な人と関わる時間を増やす。基本的に忙しい時は重要でないことに時間を取られていることが多い。大切な人より重要なことはないので自然と調整される。
