--- a/shared/sex/性欲.md
+++ b/shared/sex/性欲.md
@@ -32,3 +32,6 @@
 > https://x.com/shiro_shirtmax/status/2017254341682634774?s=61
 
 男は応えることで愛情を示すのに、女は求められないことで不安になる。
+
+生物として、性欲があるのに子供が欲しくないってことはあるのか？
+ただ、子供を育てられないから作れないことはある。それを欲しくないと言い張ってる可能性はある。
