--- a/shared/sleep/睡眠時間.md
+++ b/shared/sleep/睡眠時間.md
@@ -13,3 +13,5 @@
 夜に寝たかったら、就寝予定時間の8時間前からは仮眠しない。
 
 膀胱や胃が小さいとそもそも連続して眠れる時間が少ないのかも。
+
+睡眠時間をコントロールするには、寝る時間を薬で決めるよりも寝ない時間を薬で決める方が安全。朝日を浴びて、カフェインで昼間は絶対に起きておく。夜はカフェインが切れるようにして、あとは単によく眠れる環境を整える。
