--- a/shared/health/exercise/tips/脂肪を落とす.md
+++ b/shared/health/exercise/tips/脂肪を落とす.md
@@ -18,3 +18,7 @@ HIITは数分で効果が出る。
 皮下脂肪は食事を抑えないと落ちない。
 
 脂肪を落とす前に筋肉をつける。
+
+食後に運動してもインスリンが分泌されていて脂肪燃焼が抑えられている。
+大きな筋肉、複数の筋肉を使うトレーニングの方が脂肪燃焼効果は高い。
+https://youtu.be/Ex2kHW8eE8o?si=vctRY1CJUpYN-JRz
