--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -147,3 +147,6 @@
 
 共感というより、感情を言葉にすることで誘導する。
 「楽しかったね」って言われると楽しかったように感じる。
+
+共感で拾えそうなキーワードが複数あるならできるだけポジティブなほうを拾う。
+「不安だったけどうまくできて達成感があった」みたいに不安と達成感の二つがあれば達成感にフォーカスする。
