--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -23,3 +23,6 @@ https://x.com/womanhumour/status/1819723107973873958
 シャツはできるだけこまめに買い替えた方が色や匂いもないし襟も伸びてないので綺麗。古いのは買った店のリサイクルに出せばいいし。
 
 清潔感があるだけじゃなくて、期待感があるといい。
+
+「清潔感がない」とか、「生理的に無理」っていうのは「抱かれたくない」ってこと。
+まぁ、特にひどい場合は接触がなくても病気をうつされそうだから死んでほしいって意味だけど、そこまではなかなかいない。
