--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -88,3 +88,5 @@ https://x.com/shiroku__mama/status/1963543241292136671?s=12
 
 男が育児に参加するようになったのは、単純に家族の人数が減ったからだと思う。親元から離れて暮らすことが多い。
 とはいえ最近は都会生まれの割合も増えてきているので、逆に親元で大きな家族を形成することも増えるかも。
+
+子どもが非行に走らないようにするには、子どもがふと振り返ったときに親と目が合わないといけない。
