--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -263,3 +263,9 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 声を出す時は息に圧がかかった状態を維持する。
 
 息に圧をかけるのは横隔膜が中心で、そこからさらに下腹で胸郭を太鼓のように叩いてリズムを取る。
+
+家で強い息を使おうとするとどうしても抑えてしまう。
+家では抑揚のない歌い方の練習と、呼吸だけ強弱をつける基礎トレにしたほうが無難。
+強い息なのに声を小さく抑える癖がつくのは良くない。
+
+リップロールとかで声を抑えながら強い息を使う練習をしてもいい。
