--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -46,6 +46,8 @@
   - 意外だと思ったことを伝える
 - 丁寧に扱う
 - 面倒を見る、世話をする
+- こまめに連絡する
+- すぐに反応する
 
 ## Bad
 
@@ -135,3 +137,6 @@
 目を合わせて微笑んだり、話や姿を覚えたり、頷いたりするだけでも十分に関心は示せる。
 
 亜情を持ってないのが伝わってしまっているとよくない。
+
+連絡とかは興味ではない。
+連絡をこまめにしても相手を知ることはできない。
