--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -274,3 +274,5 @@ https://www.total-marriage.com/column/1644/
 ただ、相手から誘うのが苦手で、距離を詰めてもらった方が助かる人もいる。
 
 友人も恋人も親しくなるって方向性は近いけど、友人のゴールは気を遣わなくなること、恋人のゴールは子どもを作って育てることだ。
+
+親しくなるには興味よりも関心が必要。
