--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -215,3 +215,7 @@ careの関心は注意の方が近いかも。mindとも近い。
 判断には行動が伴うべき。特別さは行動によって示す。
 
 関心というのは、責任や覚悟にも繋がる。
+
+飲み会とかだと長くても2-3時間だから目の前の人に関心を持ってとりあえず会話を続けようとする人が多い。それすらできない子供もいるけど、基本的に大人だったらそれくらいの一時的な会話はさらっとこなせる。
+でも個人的に親しくなるためには好意や興味を持たれないといけない。社交とはまた別の軸がある。子供はどちらかというとこっちが得意。関心ではなく興味で動く。まぁ、大人も兼ねてないとすぐ破綻するけど。中期的な関係は興味が先行する。
+相手のことをほとんど知り尽くして興味も絶えたと思っても長期的になんだかんだ腐れ縁を続けていくのは興味や関心よりもお互いの信頼。お互いに恩がある。中期的な関係でお互いに助け合うのが大事。
