--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -74,3 +74,5 @@
 人間の恋愛で必要なのはセックスではなく、恋人を選ぶこと。だから価値観とかをよく話すのが大事。でも口ではどうとでも言えるので泊まりで旅行したりして行動も見るのが大事。
 
 恋人になる前にしっかり価値観をすり合わせないといけないので、交際中に不安や不満を話し合わないのは間違い。それで合わなくて別れる方がいい。
+
+男性が女性を大切にするのは自分の子供を産んでくれるからであって、そうでないならわざわざ大切にしなくてもいい。
