--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -1,3 +1,5 @@
+自分という楽器を大きくする。
+
 ## 目的
 
 どれだけ上手く演奏できても楽器がリコーダーならチープで軽い音しか出ない。まずは自分という楽器をグランドピアノやパイプオルガンのように大きく育てるのが先。もちろんそれと並行して上手い演奏を練習するのはいいけど、優先順位は決める。
@@ -7,11 +9,16 @@
 
 歌よりも声を育てるのは、周りがリコーダーで難しい曲を弾こうとしている中で一人だけサックスやグランドピアノを使おうとしているようなもの。もちろんリコーダーにもリコーダーの良さがあるけど、自分のパフォーマンスの限界がリコーダーかどうかは鍛えてみないとわからない。
 
-## 方法
+## 必要な筋肉
 
-声を育てるということは、喉を開く首の筋肉、息を強く細くする横隔膜、それらを補助する腹や背中の筋肉、などを鍛えるということ。自分という楽器を大きくする。
+- 声帯を前に引っ張る（喉仏を前に倒す）筋肉: 首や胸
+- 声帯を後ろに引っ張る筋肉
+- 胸を広げる筋肉: 肋間筋
+- 横隔膜を下げる筋肉
+- 横隔膜を押し上げる筋肉: 腹筋下部や背筋下部
+- 舌を動かす筋肉
 
-特に筋トレしないといけないのは、横隔膜、内腹筋、喉を下げる首と胸の筋肉、舌の筋肉、あたり。
+声を出すために特に鍛えないといけないのはこのあたり。
 
 ## 結果
 
