--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -53,3 +53,5 @@ https://x.com/yumene_love/status/2016643430315921460?s=12
 ただ、頻度がわかるくらいの期間は必要。
 
 女が男を求める方がうまくいく。でも男に求めすぎるとめんどくさくなって捨てられるので、自分からも与えながら求めるのが大事。男はそれに応えるだけの器が必要。
+
+子どもを作ると後戻りするのが難しいので、交際期間でしっかり子どもを産んで育てる能力があるかどうかお互いに見極めないといけない。ただ、ほとんどの人は初めてなので勉強が必要。人間は他の動物よりも求められる能力が複雑。
