--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -58,9 +58,10 @@
 
 付き合ったからすぐセックスするものでもない。
 ただ、恋人になる前にはセックスも試しておくべきだし、お互いの頻度やタイミングが合うかどうかも大事。
+逆に、あえてセックスを遅らせる必要もない。最初にセックスして付き合うこともある。
 
 恋人になりたいなら、最初から恋愛モードで入った方がいい。
-早めにタメ口にする。
+早めにタメ口に近づけていくとか。
 
 人間は責任を避けるものなので、恋とかの生理現象で勢いをつけた方が恋人になりやすい。
 
