--- a/shared/respect/敬意.md
+++ b/shared/respect/敬意.md
@@ -11,3 +11,9 @@
 相手がこっちを舐めてると思ったら、さっさと損切りする。
 
 赤ちゃんだと思われたくないなら、相手に気を遣わせないようにするのが大人。
+
+「都合がいい」と思われているのは舐められている。
+
+「格下」だと思われているのはそこまで舐められてない。まだ人間だと思われている。
+
+「気持ち悪い」と思われているのはむしろ怖がっている。
