--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -77,3 +77,9 @@
 恋人になる前にしっかり価値観をすり合わせないといけないので、交際中に不安や不満を話し合わないのは間違い。それで合わなくて別れる方がいい。
 
 男性が女性を大切にするのは自分の子供を産んでくれるからであって、そうでないならわざわざ大切にしなくてもいい。
+
+第一印象が特に大事。
+
+相手に怯えを見せると恋愛対象じゃなくなる。
+
+他人をチンパンジーだと思ってて目を合わさない人も怯えているように見える。
