--- a/shared/sex/dating/tips/女性にモテたい.md
+++ b/shared/sex/dating/tips/女性にモテたい.md
@@ -1,5 +1,9 @@
+好まれる性質:
+
 - 格上
-- モテている
+  - 身長が高い
+  - 稼いでいる
+  - モテている
 
 女性から男性の方はモテるやつがモテる。
 だからモテたいならモテるやつを真似る。
@@ -37,3 +41,7 @@ https://x.com/prada_46/status/1811005372855108064
 男性は女性をちょっと怖がらせるくらいの方が強さを演出できて舐められないのかもしれない。
 
 女性にばっかりモテようとしている人は余裕がないようにも見える。
+
+女は見下されるのが好きなので、不幸にすればするほどモテる。
+
+まぁ、男が女に負けるわけないので、男で女に怯えてるように見える人がいたら単に襲い掛かられたときに殴りたくないからなんだけど。サル山ではサルと目を合わせないのが礼儀であり自己防衛。
