--- a/shared/sex/セックス.md
+++ b/shared/sex/セックス.md
@@ -96,3 +96,5 @@
 男のセックスはドーパミンを得るもので、女のセックスはオキシトシンを得るもの。
 
 セックスは行為であって、恋愛の延長とは限らない。社交とか商売でセックスすることもある。
+
+女性は心がガキでも体が大人なら価値があるので若いうちはチヤホヤしてもらえる。マンコとしてチンコが面倒を見てくれる。
