--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -22,18 +22,24 @@
   - 話の重要な部分で大きく反応する
     - 驚く
     - 目を見開く
-  - ノリ、テンションを合わせる
+  - ノリ、トーン、テンションを合わせる
   - 相手の表情と合わせる
 - 相手を理解しようとする
   - 意味がわからなかったことを質問する
-- 相手を理解して、予測する
+- 相手を理解する
+  - 共感
   - 相手の言動を先回りする
 - 相手のことを覚えようとする
-  - 相手のおすすめをメモする、その場で調べる
+  - 相手の言ったことを繰り返す
+  - 相手のおすすめをメモする
+  - 相手のおすすめを詳しく調べる
   - 相手のおすすめを使って感想を話す
+- 相手を話題にする
 - 相手のことを覚えている
   - 名前を呼ぶ
   - 真似する
+  - 過去に話したことを話題にする
+    - 誕生日などのちょっとしたことでも覚えている
   - ちょっとした変化に気づく
     - 前に会った時と変わったところを指摘する
       - 髪型や服装の変化に気づいて指摘する
@@ -51,6 +57,10 @@
 
 ## Bad
 
+- 無視する
+  - 否定する
+  - 比較する
+  - 評価する
 - 無表情
 - 無反応
 - 携帯を触る
