--- a/shared/love/interesting/興味を示す.md
+++ b/shared/love/interesting/興味を示す.md
@@ -1,22 +1,19 @@
 ## Good
 
-- 名前を呼ぶ
-- 過去に話したことを話題にする
-  - 誕生日などのちょっとしたことでも覚えている
+- 相手の細かいところに気づいて指摘する
+- 褒める
+- 同意する
 - 大きく反応する
   - 目を大きく開く
-- 覚えようとする
-  - 繰り返す
-  - メモする
-  - 詳しい情報を調べる
 
 ## Bad
 
 - 解像度が低い
+- 貶す
+- 文句を言う
 - (会話)
   - 返事が単調
   - 声のトーンが合わない
-- 相手の言ったことを否定する
 
 ## その他
 
