--- a/shared/trust/intimacy/好感.md
+++ b/shared/trust/intimacy/好感.md
@@ -1,4 +1,11 @@
-# Favor
+好きということは、恩恵がある、期待できるということ。
+
+好感と親近感は似たところがある。
+信頼、期待できそうな感じ。まだ恩恵が得られてなくても、期待があれば好感につながる。
+
+「この加湿器、おおよそ満足してるんだけど、寝る時にガタガタ揺れて振動で起こされることがあるから「遠ざけよう」」と思ったらもうその製品は買わない。信頼してない。
+
+近くに置きたくなる、自分から近寄りたくなる製品は信頼される。
 
 favorは「恩恵」と捉えることもある。信頼があること。良い期待があること。
 
