--- a/shared/care/attention/tips/関心をひく.md
+++ b/shared/care/attention/tips/関心をひく.md
@@ -114,3 +114,14 @@
 道歩いてたら犬とか子どもに注意する。
 
 動きが少ないと注意を引きにくい。
+
+流行りに乗った方が関心を集めやすい。ただ、流行りを追うのにコストがかかるので、それはそれで大変ではある。
+
+相手がこちらに興味がない状態で話すのは難しい。
+若手で知られてない芸人さんみたいな感じ。
+どこで興味を持つのか。
+
+興味の基本は利害関係なので、相手になんらかの価値を提供することで興味を持ってもらいやすくなる。
+
+「みんなの花壇を踏み荒らした人が注目を集めているとき、踏み荒らした人が自分には注目を集める力があると感じたりするけど、みんなの興味関心があるのは実際は花壇の方であって、その人ではないというすれ違いがある」
+https://x.com/masillo/status/478575781933621248
