--- a/shared/trust/intimacy/tips/好意を示す.md
+++ b/shared/trust/intimacy/tips/好意を示す.md
@@ -1,3 +1,18 @@
+## 前提
+
+まずは好意よりも関心を示す。
+いきなり好意を示すのは重い。
+
+## 方法
+
+- 関心を示す
+- 興味を示す
+- 顔や体を近づける
+- 帰ろうとするのを引き止める
+- スマホの画面を見せる
+
+## その他
+
 「親しくなりたい」という気持ちを示す。
 
 まずは相手に興味を持ってもらうのが先。
@@ -9,16 +24,8 @@
 
 人懐っこくて好意を示すのは、お互いに好意があるとさらに距離が縮まる。
 
-- 興味を示す
-- 関心を示す
-- 近寄る
-- 帰ろうとするのを引き止める
-
 帰る理由を言わない方が引き止めやすい。
 
 あえてプライベートを晒す、というのも好意を示しているのかも。
-
-- 失敗談を話す
-- スマホの画面を見せる
 
 親しくないのに好意を示しすぎると重い。少しずつ近づく。でも待ちには回らない。
