--- a/shared/entertainment/examples/配信.md
+++ b/shared/entertainment/examples/配信.md
@@ -20,3 +20,5 @@
 スパチャ読みとか、配信の元の趣旨と違うパートは枠を分けたほうがいい。特に巻き戻しできない設定の場合、早く終われば途中から見に来た人も見返せるし。
 
 モテた経験がないとわざわざ配信なんてやろうと思わないと思うんだけど。
+
+配信の会話は相手を楽しませるよりもリスナーを楽しませるための会話なので、相手を楽しませる会話とは違う。何人かで協力したトーク、あるいは漫才に近い。
