--- a/shared/human/body/muscle/training/tips/腰を鍛える.md
+++ b/shared/human/body/muscle/training/tips/腰を鍛える.md
@@ -4,3 +4,5 @@ https://x.com/rinoon8229/status/2012348222254027028?s=12
 
 膝立ちで少し体を後ろに傾けて、左右の手で交互に同じ方の踵を触る。
 https://x.com/tachu_muscle/status/2017878083810861384?s=12
+さらに腰を上げ下げしながら行う。
+https://x.com/sa_nan_beat/status/2017880930636255240?s=12
