--- a/shared/story/telling/キャラクター.md
+++ b/shared/story/telling/キャラクター.md
@@ -37,3 +37,6 @@
 あまりにも万能すぎるキャラはストーリーの進行を邪魔してしまう。
 
 漫画における派手な武装や服装には親子や兄弟などの似た顔のキャラを区別する役割もある。
+
+キャラ名とかハンドルネームとか考えるのに参考になりそうなサイト
+https://name-site.net/
