--- a/shared/sports/ランニング.md
+++ b/shared/sports/ランニング.md
@@ -4,3 +4,6 @@
 走り出した後は足首を固定して、地面を蹴るのはつま先でも筋肉は腿側を使わないといけない。足首が緩まって爪先だけで蹴るとブレーキがかかる。
 
 肩に力が入っていると疲れやすい。呼吸が悪くなる。
+
+腿を上げるのではなくて、骨盤を回転させて後ろの足を力強く押し出すと自然と逆の足が上がる。
+https://www.youtube.com/shorts/W2Ne_FFItk0
