--- a/shared/trust/intimacy/tips/好意を見分ける.md
+++ b/shared/trust/intimacy/tips/好意を見分ける.md
@@ -1,2 +1,4 @@
 好意で言うと相手から質問される、相手から自分と親しくなろうとする、というのが大事。
 とりあえず会話としては話を拾う、話を振る、ってのが基本なんだけど、相手から質問されないとどれだけ盛り上がっても好意は持たれてないかも。
+
+自分が相手に頼った時に助けてくれるかどうかでも好意や敬意がわかる。
