--- a/shared/lifestyle/clothing/服のシルエット.md
+++ b/shared/lifestyle/clothing/服のシルエット.md
@@ -33,3 +33,8 @@ AはAの形の頭の部分をしっかり絞るのが大事。
 腹が出ているとOのシルエットにしかならない。
 
 鍛えていて肩幅が広いとどうやってもYかOのシルエットにしかならない。
+
+服はどこか絞らないとだぼっとしてルーズな印象がある。カジュアルでもルーズにはしない。
+
+Iラインは体の細さを強調する。
+太い人はぴっちりした服を着てもOラインになってしまうので、三首を絞るとかしないといけない。
