--- a/shared/society/謝意.md
+++ b/shared/society/謝意.md
@@ -38,3 +38,6 @@
 故意かどうかはどうでもいい。重要なのは、謝意があるかどうか。ないなら殺してもいい。
 
 相手を傷つけるのは仕方ないけど、意図的に傷つけないのと、傷つけたら謝るのが大事。
+
+相手が謝らないのは別にプライドとは全く関係ない。自分が勝手に傷ついたと思っているだけ。自分のせいなのに「プライドが高い」って相手にレッテルを貼って自分を守っている。
+誰かのことを「プライドが高い」とか「マウントしないで」とかいう人は基本的に他責の人。
