--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -144,3 +144,8 @@
 結婚と恋愛は違うけど、恋人になったら普通は結婚するもの。
 
 なんとなくで恋人になって子どもを作ったらそのまま結婚するくらいでまぁいい。そもそも結婚ってそういう場合の方が多いしただの制度。
+
+実際のところ、恋人になっていないなら結婚する理由も特にない。
+子供を作るタイミングで結婚するのが基本。
+
+妊娠や出産をしていないなら結婚していても交際の延長でしかない。
