--- a/shared/trust/intimacy/tips/好意を示す.md
+++ b/shared/trust/intimacy/tips/好意を示す.md
@@ -10,6 +10,9 @@
 - 顔や体を近づける
 - 帰ろうとするのを引き止める
 - スマホの画面を見せる
+- 言葉で伝える
+  - 「仲良くなりたい」
+  - 「好き」
 
 ## その他
 
@@ -29,3 +32,5 @@
 あえてプライベートを晒す、というのも好意を示しているのかも。
 
 親しくないのに好意を示しすぎると重い。少しずつ近づく。でも待ちには回らない。
+
+関心を示すのと好意を示すのは近い。
