--- a/shared/trust/intimacy/好意.md
+++ b/shared/trust/intimacy/好意.md
@@ -109,3 +109,8 @@
 親しくなりたいと思うこと。
 
 相手が自分と親しくなりたいと思っているか、好意があるか、をどうやって見分けるか。
+
+関心と好意は近いけど、関心があっても近づこうとするとは限らない。
+好意は、関心があった上で、近づこうとする。
+
+好意は関心が前提。
