--- a/shared/lifestyle/clothing/服のシルエット.md
+++ b/shared/lifestyle/clothing/服のシルエット.md
@@ -38,3 +38,8 @@ AはAの形の頭の部分をしっかり絞るのが大事。
 
 Iラインは体の細さを強調する。
 太い人はぴっちりした服を着てもOラインになってしまうので、三首を絞るとかしないといけない。
+
+足首を絞るには、ズボンが入るブーツとか、足首が見える丈のパンツとかあると便利。あとは初めから絞られてるパンツとか。
+首は適当に首元開けばいいし、手首もサイズが合ってたら見えるはず。
+
+腰は丈が短い上着にして腰のラインを見せるか、上からベルトで絞る。
