--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -1067,3 +1067,8 @@ loveとgoodの概念は近い。
 不安で束縛するのは愛ではない。
 
 悪いところを見ないふりするのは愛とは言えない。
+
+恋すると相手を愛することが多い。良いところが見えやすい。
+でも恋が冷めると愛も冷めて悪いところばかり見えるようになる。
+
+愛は積極的。
