--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -124,3 +124,5 @@
 
 気分を上げるときはその人に特化した方法があるといい。人によって効果が違う。
 まず自分がどういうことで気分を上げるのか知っておくことから始める。
+
+自分から不幸になろうとしているクズ男好きに「でもそれってあなたが優しいからなんだよね」みたいにポジティブに捉えて伝えるのもクズ男の常套句。
