--- a/shared/sex/dating/tips/恋人の有無を探る.md
+++ b/shared/sex/dating/tips/恋人の有無を探る.md
@@ -1,13 +1,20 @@
-観察
+## 観察
 
 - 婚約指輪や結婚指輪をしているか
   - 指
   - 首（ネックレス）
 
-質問
+## 質問
 
+- 結婚しているか
 - 恋人はいるか
 - 恋人にするならどんな人がいいか
 - (恋人がいるなら)
   - どんな人か
 - (旅行とか食事の話を聞いて) 誰と行ったか
+
+## 付き合ってそうな二人に対して
+
+- 二人はどこか行きたいところがあるか
+
+## その他
