--- a/shared/sex/dating/tips/相手に異性として意識させる.md
+++ b/shared/sex/dating/tips/相手に異性として意識させる.md
@@ -2,3 +2,15 @@
 友達なら言わないような褒め方とか、女性に意識させるようなことを言って暗に伝える。
 
 好意を伝えるのも別に恋愛としてでなくても好かれやすい。
+
+恋バナをする。
+
+アプローチする。
+
+- あなたが一番
+- 好き
+- かわいい
+- 二人だけの秘密
+
+結婚したり交際したりした場合の未来を連想させるのも大事。
+理想のデートの話をしてから、自分とならどう？とか言ってみるとか。
