--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -1,9 +1,9 @@
 # 恋人
 
-一緒に子供を作る人。
+一緒に子供を作って育てるための関係。
 
 単にセックスするだけでは恋人とは言えない。
-仕事でセックスすることもある。
+仕事でセックスすることもあるし、性欲を発散するためだけにセックスすることもある。
 
 好意を持ってセックスして、そのまま子供を作ることもある。
 
@@ -144,3 +144,8 @@
 結婚してないと社会的には交際相手と見做される。
 
 恋人とは友人のような気を遣わない関係になるべきだけど、まず恋人として親しくなる方が先。
+
+交際相手を含む場合と含まない場合がある。
+
+セフレは含まない。
+子供を作って育てるための関係ではない。
