--- a/shared/society/社会性.md
+++ b/shared/society/社会性.md
@@ -1,10 +1,29 @@
-人間には社会性がないけど、外から見た振る舞いとしては後天的に身につけることができる。
+# 社会性
+
+社会を維持しようとする性質。
+
+## 良い振る舞い
 
 - 社会を維持しようとする
   - 他人を守る
+    - 特に女や子どもを守る
   - 他人と協力する
   - 約束を守る
     - 時間を守る
     - 規則を守る
 
+## 悪い振る舞い
+
+- 人を害そうとする
+  - 人を殺そうとする
+  - 人のものを奪おうとする
+    - 不倫する
+
+## その他
+
+人間には社会性がない。
+ただ、外から見た振る舞いとしては後天的に身につけることができる。
+
 人間は社会性がなくてすぐ社会を壊そうとする。
+
+人間には社会性がないけど、社会性がないと思われると世間体が悪い。
