--- a/shared/care/responsibility/自責と他責.md
+++ b/shared/care/responsibility/自責と他責.md
@@ -2,3 +2,6 @@
 認識が現実に則さないことが増える。
 
 自分が間違えるなんてクソ当たり前のことにいちいち言及しないと、一周回って他責に見えるのかも。
+
+原因と解決の２ヶ所がある。
+両方自責、両方自責もあるけど、原因が自責でも解決は他責とか、原因が他責でも解決は自責ってことがある。
