--- a/shared/assertion/tips/コンサルティング.md
+++ b/shared/assertion/tips/コンサルティング.md
@@ -21,3 +21,9 @@
 財務の改善、戦略やコンセプトの設定、実行の支援
 
 コンサルは顧客も優秀でないと有効活用できないけど、顧客が優秀ならコンサルは要らない。つまり、コンサルは要らない。
+
+コンサルのよくある問題:
+
+- 現場を理解せずに理論だけで提案する
+- 短期的な数字改善に偏って長期的な競争力を損なう
+- 企業の文化や強みを無視した画一的な施策を押し付ける
