--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -14,3 +14,7 @@
 同じような商品があっても、自分だけの特別な商品を新たに出すのはビジネスの楽しみではある。
 
 ビジネスの初期はお金にならないものが多い。
+
+既存のビジネスとしては、ランサーズやクラウドソーシングでどのような仕事が求められているか知ることもできる。求人とか見るのもいいだろう。
+https://www.lancers.jp/
+https://crowdworks.jp/
